--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,36 @@
 version: "3.9"
 services:
+  web:
+      container_name: lweb
+      image: nginx:latest
+      ports:
+        - 5100:5100
+      volumes:
+        - ./:/etc/nginx/html/:ro
+        - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      links:
+        - ttyd
+      develop:
+        watch:
+          - action: sync
+            path: ./
+            target: /
       
   vm:
-    container_name: vm
+    container_name: lvm
     build: ./docker/vm
 
   ttyd:
     container_name: ttyd
     build: ./docker/ttyd
-    command: "ttyd --ssl --ssl-cert /home/dokku/linuxvm/tls/server.crt --ssl-key /home/dokku/linuxvm/tls/server.key -W docker run -it --cpus=1 --memory=128mb --network=none --rm sendit-ide-vm"
+    command: "ttyd -W docker run -it --cpus=1 --memory=128mb --network=none --rm sendit-linux-vm"
     ports:
       - 7681:7681
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    develop:
+      watch:
+        - action: sync
+          path: ./index.html
+          target: /
+        
