--- a/nginx.conf
+++ b/nginx.conf
@@ -17,11 +17,9 @@ http {
         server ttyd:7681;
     }
 
-
-    # map $http_upgrade $connection_upgrade {
-    #     default upgrade;
-    #     ''      close;
-    # }
+    upstream webserver_backend {
+        server webserver:8080;
+    }
 
     server {
         listen          5100 default;
@@ -49,10 +47,11 @@ http {
         }
 
         location / {
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://webserver_backend/;
         }
     }
 }
