--- a/ttyd.service
+++ b/ttyd.service
@@ -4,7 +4,7 @@ After=syslog.target
 After=network.target
 
 [Service]
-ExecStart=ttyd --ssl --ssl-cert /home/dokku/linuxvm/tls/server.crt --ssl-key /home/dokku/linuxvm/tls/server.key -W docker run -it --cpus=1 --memory=128mb --network=none --rm sendit-ide-vm
+ExecStart=ttyd --ssl --ssl-cert /home/dokku/linuxvm/tls/server.crt --ssl-key /home/dokku/linuxvm/tls/server.key -W docker run -it --cpus=1 --memory=128mb --rm sendit-ide-vm
 Type=simple
 Restart=always
 User=root
