--- a/docker/vm/Dockerfile
+++ b/docker/vm/Dockerfile
@@ -3,7 +3,9 @@ FROM ubuntu:latest
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     htop \
     cmatrix \
+    build-essential \
     python3 \
+    python3-pip \
     sqlite3 \
     nano \
     vim \
