Update Docker VM

--- a/docker/vm/Dockerfile
+++ b/docker/vm/Dockerfile
@@ -1,20 +1,35 @@
-FROM ubuntu:latest
+FROM ubuntu:24.04
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
-    htop \
-    cmatrix \
+    # Tools
     build-essential \
+    tmux \
+    htop \
+    btop \
+    tree \
+    curl \
+    wget \
+    httpie \
+    git \
+    openssh-client \
+    # Program Languages Runtimes
+    nodejs \
+    npm \
     python3 \
     python3-pip \
+    python3-venv \
+    openjdk-21-jdk-headless \
+    # Database
     sqlite3 \
+    # Editors
     nano \
     vim \
-    wget \
-    curl \
-    dnsutils \
-    mtr \
-    iproute2 \
+    emacs \
+    # TUI
+    neofetch \
     nyancat \
+    cmatrix \
+    # Remove APT CACHE
     && rm -rf /var/lib/apt/lists/*
 
 CMD ["bash"]
